--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>ElectronSun</groupId>
     <artifactId>ElectronSun</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -18,6 +19,7 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 
     <properties>
@@ -39,20 +41,21 @@
         <!-- Logging -->
         <logback.version>1.1.7</logback.version>
         <slf4j.version>1.7.21</slf4j.version>
-
         <!--DB-->
         <postgresql.version>9.4.1211</postgresql.version>
         <!--    Tests  -->
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
-
         <!-- Hibernate -->
         <hibernate.version>5.2.2.Final</hibernate.version>
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
-
         <!--Tools-->
         <ehcache.version>2.10.2.2.21</ehcache.version>
+        <!--JQuery-->
+        <webjars-jquery.version>3.1.1-1</webjars-jquery.version>
     </properties>
+
+
 
     <dependencies>
         <!-- DB -->
@@ -192,7 +195,11 @@
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${webjars-jquery.version}</version>
+        </dependency>
         <!--Google Guava-->
         <dependency>
             <groupId>com.google.guava</groupId>
