--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <tomcat.version>8.0.33</tomcat.version>
-        <spring.version>4.3.2.RELEASE</spring.version>
-        <spring-security.version>4.1.3.RELEASE</spring-security.version>
+        <spring.version>4.3.5.RELEASE</spring.version>
+        <spring-security.version>4.2.1.RELEASE</spring-security.version>
         <spring-data-jpa.version>1.10.4.RELEASE</spring-data-jpa.version>
         <spring-aspects.version>4.3.4.RELEASE</spring-aspects.version>
         <joda-time.version>2.9.6</joda-time.version>
@@ -174,6 +174,22 @@
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!--spring-security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring-security.version}</version>
         </dependency>
 
         <!--Web-->
