--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -51,8 +51,9 @@
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
         <!--Tools-->
         <ehcache.version>2.10.2.2.21</ehcache.version>
-        <!--JQuery-->
+        <!--webjars-->
         <webjars-jquery.version>3.1.1-1</webjars-jquery.version>
+        <webjars-datatables.version>1.10.12-1</webjars-datatables.version>
     </properties>
 
 
@@ -211,18 +212,17 @@
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!--webjars-->
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>${webjars-jquery.version}</version>
         </dependency>
-        <!--Google Guava-->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${google-guava.version}</version>
+            <groupId>org.webjars</groupId>
+            <artifactId>datatables</artifactId>
+            <version>${webjars-datatables.version}</version>
         </dependency>
-
     </dependencies>
 
 
