--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,8 @@
         <spring-aspects.version>4.3.4.RELEASE</spring-aspects.version>
         <joda-time.version>2.9.6</joda-time.version>
         <joda-time-hibernate.version>1.4</joda-time-hibernate.version>
-        <google-guava.version>20.0</google-guava.version>
-
+        <!--json-->
         <jackson-json.version>2.8.4</jackson-json.version>
-
         <!-- Logging -->
         <logback.version>1.1.7</logback.version>
         <slf4j.version>1.7.21</slf4j.version>
@@ -54,6 +52,8 @@
         <!--webjars-->
         <webjars-jquery.version>3.1.1-1</webjars-jquery.version>
         <webjars-datatables.version>1.10.12-1</webjars-datatables.version>
+        <webjars-noty.version>2.3.8</webjars-noty.version>
+
     </properties>
 
 
@@ -212,6 +212,7 @@
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
         <!--webjars-->
         <dependency>
             <groupId>org.webjars</groupId>
@@ -223,6 +224,12 @@
             <artifactId>datatables</artifactId>
             <version>${webjars-datatables.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>noty</artifactId>
+            <version>${webjars-noty.version}</version>
+        </dependency>
+
         <!--JSON-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
