--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <ehcache.version>2.10.2.2.21</ehcache.version>
         <!--webjars-->
         <webjars-jquery.version>3.1.1-1</webjars-jquery.version>
+        <webjars-jquery-ui.version>1.12.1</webjars-jquery-ui.version>
         <webjars-datatables.version>1.10.12-1</webjars-datatables.version>
         <webjars-noty.version>2.3.8</webjars-noty.version>
         <webjars-jquery-modal.version>0.8.0</webjars-jquery-modal.version>
@@ -219,6 +220,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>${webjars-jquery.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery-ui</artifactId>
+            <version>${webjars-jquery-ui.version}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
